--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mocha": "^6.0.2"
   },
   "dependencies": {
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23"
   }
 }
